hphp/hack/test/typecheck/final_property.php.exp
File "final_property.php", line 4, characters 3-37:
Properties cannot be declared final (Parsing[1002])
